# repropilot

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: scoring.md
repropilot/: cli.py
repropilot/checker/: __init__.py  badge.py  config_rules.py  data_rules.py  onboarding_rules.py  report.py  results_rules.py  rules.py  scanner.py  scoring.py  terminal_output.py  workflow_rules.py
repropilot/generator/: fake_image_template.py  project_writer.py
test_output/: DATA.md  LICENSE  README.md  requirements.txt
test_output/.github/workflows/: repropilot.yml
test_output/configs/: default.yaml
test_output/outputs/: eval_metrics.json  metrics.json  model.pt  run_config.yaml
test_output/src/: dataset.py  eval.py  model.py  train.py  utils.py
test_output/tests/: test_smoke.py
tests/: test_fixtures.py  test_generator_fake_image.py  test_report_badge.py  test_rules.py  test_scanner.py  test_scoring.py
tests/fixtures/good_repo/: DATA.md  LICENSE  README.md  requirements.txt
tests/fixtures/good_repo/.github/workflows/: ci.yml
tests/fixtures/good_repo/configs/: default.yaml
tests/fixtures/good_repo/outputs/: metrics.json
tests/fixtures/good_repo/src/: train.py
tests/fixtures/medium_repo/: README.md
tests/fixtures/medium_repo/configs/: default.yaml
