[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "repropilot"
version = "0.1.0"
description = "A static reproducibility linter for ML repositories."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Antai-Liu" }]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/Antai-Liu/repropilot"
Repository = "https://github.com/Antai-Liu/repropilot"
"Bug Tracker" = "https://github.com/Antai-Liu/repropilot/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
repropilot = "repropilot.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["test_output"]
